sfdx-source/core/main/schema/objects/PlatformEvents_Distribution__mdt/PlatformEvents_Distribution__mdt.object-meta.xml
<CustomObject>
    <description>Maintains the list of Platform-Event consumers.</description>
    <label>Platform Events - Distribution</label>
    <pluralLabel>Platform Events - Distributions</pluralLabel>
</CustomObject>