sfdx-source/core/main/schema/objects/PlatformEvents_Distribution__mdt/fields/Consumer__c.field-meta.xml
<CustomField>
    <fullName>Consumer__c</fullName>
    <description>The name of the Apex Class that implements mmlib_IEventConsumer that the subscription is operating on behalf of.</description>
    <inlineHelpText>The name of the Apex Class that implements mmlib_IEventConsumer that the subscription is operating on behalf of.</inlineHelpText>
    <label>Consumer</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>