sfdx-source/core/main/schema/objects/PlatformEvents_Distribution__mdt/fields/EventBus__c.field-meta.xml
<CustomField>
    <fullName>EventBus__c</fullName>
    <description>Specifies the event&#39;s SObject Type that the consumer desires.</description>
    <inlineHelpText>Specifies the event&#39;s SObject Type that the consumer desires.</inlineHelpText>
    <label>Event Bus</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>