sfdx-source/core/main/schema/objects/PlatformEvents_Distribution__mdt/fields/EventSObjectCategory__c.field-meta.xml
<CustomField>
    <fullName>EventSObjectCategory__c</fullName>
    <description>The API name of the related SObject that this subscription is for (Example: &quot;Account&quot;, or &quot;Intake__c&quot;).  It could also represent a non-SObject, arbitrary, category (Example: &quot;SalesActivity&quot;)..  This helps to filter subscriptions better.</description>
    <inlineHelpText>The API name of the related SObject that this subscription is for (Example: &quot;Account&quot;, or &quot;Intake__c&quot;).  It could also represent a non-SObject, arbitrary, category (Example: &quot;SalesActivity&quot;)..  This helps to filter subscriptions better.</inlineHelpText>
    <label>Event SObject Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>