sfdx-source/core/main/schema/objects/PlatformEvents_Distribution__mdt/fields/MatcherRule__c.field-meta.xml
<CustomField>
    <fullName>MatcherRule__c</fullName>
    <description>This determines which fields must match the event in order for it to be distributed to the consumer.</description>
    <inlineHelpText>This determines which fields must match the event in order for it to be distributed to the consumer.</inlineHelpText>
    <label>Matcher Rule</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Match Platform Event Bus and Related SObject and Event Name</fullName>
                <default>true</default>
                <label>Match Platform Event Bus and Related SObject and Event Name</label>
            </value>
            <value>
                <fullName>Match Platform Event Bus and Related SObject</fullName>
            </value>
            <value>
                <fullName>Match Platform Event Bus and Event Name</fullName>
            </value>
            <value>
                <fullName>Match Platform Event Bus Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>