sfdx-source/core/main/schema/objects/PlatformEvents_Distribution__mdt/fields/RelatedPlatformEventBus__c.field-meta.xml
<CustomField>
    <fullName>RelatedPlatformEventBus__c</fullName>
    <description>Required value specifying the platform event bus for matching to desired events, i.e. &quot;Sales&quot;, &quot;Marketing&quot;.</description>
    <inlineHelpText>Required value specifying the platform event bus for matching to desired events, i.e. &quot;Sales&quot;, &quot;Marketing&quot;.</inlineHelpText>
    <label>Related Platform Event Bus</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>